# pet

./: README.md
pet/: CHANGELOG.md  CMakeLists.txt  LED_STATUS_EXPLANATION.md  README  TIME_SYNC_FIX.md  VERSION_PROTOCOL.md  VERSION_USAGE.md  build_version.bat  build_version.sh  partitions.csv  release_version.sh  sdkconfig  test_device_heartbeat.py  test_esp32_heartbeat.py  test_heartbeat.py  test_time_sync.py
pet/main/: CMakeLists.txt  esp32_s3_szp.c  esp32_s3_szp.h  idf_component.yml  main.c  version.c  version.h
pet/main/WIFI/: ConnectWIFI.c  ConnectWIFI.h  wifi_status_manager.c  wifi_status_manager.h
pet/main/dns_server/: my_dns_server.c  my_dns_server.h
pet/main/driver/app_sr/: app_sr.c  app_sr.h
pet/main/driver/audio/: audio.c  audio.h  hal_i2s.c  hal_i2s.h
pet/main/driver/device/: COMPILATION_FIXES.md  device_manager.c  device_manager.h
pet/main/driver/feeding/: COMPILATION_FIXES.md  README_FEEDING_SYSTEM.md  feeding_http_handler.c  feeding_http_handler.h  feeding_manager.c  feeding_manager.h  test_feeding_system.py
pet/main/driver/http/: README_TTS.md  http_client.c  http_client.h  http_tts.c  http_tts.h  tts_example.c  tts_example.h
pet/main/driver/hx711/: hx711.c  hx711.h
pet/main/driver/key/: key.c  key.h
pet/main/driver/motor/: motor.c  motor.h
pet/main/driver/mqtt_client/: my_mqtt_client.c  my_mqtt_client.h
pet/main/driver/spiffs/: app_spiffs.c  app_spiffs.h
pet/main/driver/timer/: README_TIME_UTILS.md  app_timer.c  app_timer.h  time_example.c  time_utils.c  time_utils.h
pet/main/driver/websocket_client/: websocket_client.c  websocket_client.h
pet/main/driver/ws2812/: ws2812.c  ws2812.h
pet/main/web_server/: index.html  webserver.c  webserver.h
