idf_component_register(SRCS "main.c" 
                            "./WIFI/ConnectWIFI.c" 
                            "./WIFI/wifi_status_manager.c"
                            "./dns_server/my_dns_server.c" 
                            "./web_server/webserver.c" 
                            "./driver/hx711/hx711.c" 
                            "./driver/motor/motor.c" 
                            "./driver/key/key.c" 
                            "./driver/ws2812/ws2812.c"
                            "./driver/audio/audio.c"
                            "./driver/spiffs/app_spiffs.c"
                            "./driver/audio/hal_i2s.c"
                            "./driver/app_sr/app_sr.c"
                            "./driver/app_url_encode/app_url_encode.c"
                            "./driver/http/http_tts.c"
                            "./driver/http/http_client.c"
                            "./driver/timer/app_timer.c"
                            "./driver/timer/time_utils.c"
                            "./driver/feeding/feeding_manager.c"
                            "./driver/feeding/feeding_http_handler.c"
                            "./driver/device/device_manager.c"
                            "./driver/mqtt_client/my_mqtt_client.c"
                            "./driver/websocket_client/websocket_client.c"


INCLUDE_DIRS "." "./WIFI" 
            "./dns_server"
            "./web_server"   
            "./driver/hx711" 
            "./driver/motor" 
            "./driver/key" 
            "./driver/ws2812" 
            "./driver/audio" 
            "./driver/spiffs" 
            "./driver/app_sr" 
            "./driver/app_url_encode" 
            "./driver/http"
            "./driver/timer"
            "./driver/feeding"
            "./driver/device"
            "./driver/mqtt_client"
            "./driver/websocket_client"
EMBED_FILES "./web_server/index.html"
EMBED_TXTFILES
        "tuya_root_cert.pem"

)